--- a/index.html
+++ b/index.html
@@ -5,18 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ukrán–orosz háború – interaktív térkép</title>
 
-  <!-- Leaflet -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""
-  />
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
-  ></script>
+  <!-- Leaflet (integrity nélkül, hogy ne legyen fehér oldal SRI hiba miatt) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
 
   <style>
     html, body { height: 100%; margin: 0; }
@@ -31,13 +22,11 @@
       border-radius: 10px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.15);
       font: 14px/1.35 system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      max-width: 340px;
+      max-width: 360px;
     }
-    .panel h1 {
-      font-size: 14px;
-      margin: 0 0 6px 0;
-    }
+    .panel h1 { font-size: 14px; margin: 0 0 6px 0; }
     .muted { color: #555; font-size: 12px; }
+    .error { color: #b00020; font-size: 12px; margin-top: 6px; white-space: pre-wrap; }
   </style>
 </head>
 
@@ -46,23 +35,33 @@
 
   <div class="panel">
     <h1>Ukrán–orosz háború – interaktív térkép</h1>
-    <div class="muted">
-      2. lépés: alap térkép működik. Következő lépésben betöltjük a napi frissülő GeoJSON réteget.
-    </div>
+    <div class="muted">Ha mégis fehér lenne, itt kiírjuk a hibát.</div>
+    <div id="err" class="error" style="display:none;"></div>
   </div>
 
   <script>
-    // Alaptérkép
-    const map = L.map('map', { zoomControl: true }).setView([49.0, 31.0], 6);
+    function showErr(msg) {
+      const el = document.getElementById('err');
+      el.style.display = 'block';
+      el.textContent = msg;
+    }
 
-    // OpenStreetMap csempék
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; OpenStreetMap közreműködők'
-    }).addTo(map);
+    try {
+      if (typeof L === 'undefined') {
+        throw new Error('Leaflet nem töltődött be (L undefined).');
+      }
 
-    // Skála
-    L.control.scale({ imperial: false }).addTo(map);
+      const map = L.map('map', { zoomControl: true }).setView([49.0, 31.0], 6);
+
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 19,
+        attribution: '&copy; OpenStreetMap közreműködők'
+      }).addTo(map);
+
+      L.control.scale({ imperial: false }).addTo(map);
+    } catch (e) {
+      showErr(String(e && e.stack ? e.stack : e));
+    }
   </script>
 </body>
 </html>
