--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       border:0; border-radius:10px; padding:8px 10px;
       background:#111; color:#fff; cursor:pointer; font-size:12px;
     }
+    .muted { color:#555; font-size:12px; }
 
     .legend {
       position: absolute;
@@ -45,7 +46,7 @@
       border-radius: 10px;
       font-size: 12px;
       box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-      max-width: 280px;
+      max-width: 320px;
     }
     .legend b { display:block; margin-bottom:6px; }
     .legend .item { display:flex; align-items:center; gap:8px; margin:4px 0; }
@@ -59,10 +60,9 @@
       background: #f6f6f6;
       border-radius: 8px;
       padding: 8px;
-      max-height: 170px;
+      max-height: 160px;
       overflow: auto;
     }
-    .muted { color:#555; font-size:12px; }
   </style>
 </head>
 
@@ -71,7 +71,10 @@
 
   <div class="panel">
     <b>Ukrán–orosz háború – DeepState térkép</b><br>
-    <span class="muted">Most “okos” színezés + debug, hogy kiderüljön mely mezők alapján kell színezni.</span>
+    <span class="muted">
+      Megjegyzés: ebben a forrásban jelenleg 1 db poligon van üres properties-szel, ezért kategóriák (contested/UA) nem különíthetők el.
+      A poligont “orosz ellenőrzés” színnel töltjük, a kontúr “frontvonal/határ” stílus.
+    </span>
 
     <div class="row">
       <label class="chip">
@@ -87,10 +90,8 @@
 
   <div class="legend">
     <b>Jelmagyarázat</b>
-    <div class="item"><span class="swatch" style="background:#7f0000;"></span>Orosz ellenőrzés / megszállás (heurisztika)</div>
-    <div class="item"><span class="swatch" style="background:#ff7b00;"></span>Vitatott / aktív harc (heurisztika)</div>
-    <div class="item"><span class="swatch" style="background:#0057ff;"></span>Ukrán ellenőrzés (heurisztika)</div>
-    <div class="item"><span class="swatch" style="background:#d00;"></span>Frontvonal / vonal jellegű elemek</div>
+    <div class="item"><span class="swatch" style="background:#6b0000;"></span>Orosz ellenőrzés / megszállt terület (poligon kitöltés)</div>
+    <div class="item"><span class="swatch" style="background:#d00;"></span>Frontvonal / határ (poligon kontúr)</div>
   </div>
 
   <script>
@@ -104,52 +105,6 @@
     }).addTo(map);
 
     let deepStateLayer = null;
-
-    // --- KATEGORIZÁLÁS (nem csak status mezőből) ---
-    function getCategory(feature) {
-      const p = (feature && feature.properties) ? feature.properties : {};
-      // MINDEN properties mezőt egyben vizsgálunk, mert nem tudjuk a séma mezőnevét
-      const blob = JSON.stringify(p).toLowerCase();
-
-      // Gyakori kulcsszavak többféle írásmóddal
-      const looksRussian = blob.includes("russia") || blob.includes("rf") || blob.includes("ru") ||
-                           blob.includes("occupied") || blob.includes("occupation") ||
-                           blob.includes("rus") || blob.includes("рос") || blob.includes("оккуп") || blob.includes("окуп");
-      const looksUkraine = blob.includes("ukraine") || blob.includes("ua") || blob.includes("ukr") ||
-                           blob.includes("ukrainan") || blob.includes("укра") || blob.includes("укр");
-      const looksContested = blob.includes("contested") || blob.includes("battle") || blob.includes("front") ||
-                             blob.includes("active") || blob.includes("clash") ||
-                             blob.includes("gray") || blob.includes("grey") ||
-                             blob.includes("disputed") || blob.includes("vitatott") ||
-                             blob.includes("сіра") || blob.includes("сер") || blob.includes("сір") ||
-                             blob.includes("спір") || blob.includes("бої");
-
-      if (looksContested) return "contested";
-      if (looksRussian && !looksUkraine) return "russia";
-      if (looksUkraine && !looksRussian) return "ukraine";
-      // ha mindkettőre utal, inkább vitatott
-      if (looksUkraine && looksRussian) return "contested";
-      return "line_or_unknown";
-    }
-
-    function styleFeature(feature) {
-      const geomType = feature && feature.geometry ? feature.geometry.type : "";
-      const isLine = (geomType === "LineString" || geomType === "MultiLineString");
-      const cat = getCategory(feature);
-
-      // vonalak: mindig piros, jól látható
-      if (isLine) {
-        return { color: "#d00", weight: 2.5, opacity: 0.95 };
-      }
-
-      // poligonok/pontok: kategória szerint
-      if (cat === "russia")   return { color:"#7f0000", fillColor:"#7f0000", weight:1, opacity:0.9, fillOpacity:0.28 };
-      if (cat === "contested")return { color:"#ff7b00", fillColor:"#ff7b00", weight:1, opacity:0.9, fillOpacity:0.28 };
-      if (cat === "ukraine")  return { color:"#0057ff", fillColor:"#0057ff", weight:1, opacity:0.9, fillOpacity:0.20 };
-
-      // ismeretlen poligon: halvány piros
-      return { color:"#d00", fillColor:"#d00", weight:1, opacity:0.7, fillOpacity:0.10 };
-    }
 
     // UI
     document.getElementById("zoomBtn").onclick = () => {
@@ -167,50 +122,32 @@
       .then(t => document.getElementById("sourceFile").innerText = (t.trim() || "(ismeretlen)"))
       .catch(() => document.getElementById("sourceFile").innerText = "(nem elérhető)");
 
-    // --- DeepState betöltés ---
+    // DeepState betöltés
     fetch('./data/deepstate_latest.geojson', { cache: "no-store" })
       .then(r => r.json())
       .then(data => {
-        // DEBUG: nézzük az első feature property kulcsait és pár mintát
         const feats = (data && data.features) ? data.features : [];
         log("Feature count: " + feats.length);
+        if (feats[0] && feats[0].geometry) log("Geometry: " + feats[0].geometry.type);
 
-        if (feats.length > 0) {
-          const p0 = feats[0].properties || {};
-          log("Első feature geometry: " + (feats[0].geometry ? feats[0].geometry.type : "(nincs)"));
-          log("Első feature property kulcsok: " + Object.keys(p0).slice(0, 25).join(", "));
-          log("Első feature properties (röviden): " + JSON.stringify(p0).slice(0, 300) + (JSON.stringify(p0).length > 300 ? "…" : ""));
-        }
-
-        // DEBUG: kategória számláló (heurisztika alapján)
-        const counts = { russia:0, contested:0, ukraine:0, line_or_unknown:0, lines:0, polys:0 };
-        for (const f of feats) {
-          const gt = f && f.geometry ? f.geometry.type : "";
-          const isLine = (gt === "LineString" || gt === "MultiLineString");
-          if (isLine) counts.lines++; else counts.polys++;
-          const cat = getCategory(f);
-          counts[cat] = (counts[cat] || 0) + 1;
-        }
-        log("Heurisztika számláló: " + JSON.stringify(counts));
-
+        // Stílus: kitöltés (occupied) + piros kontúr (frontline/határ)
         deepStateLayer = L.geoJSON(data, {
-          style: styleFeature,
-          onEachFeature: (f, layer) => {
-            const p = f.properties || {};
-            const cat = getCategory(f);
-            const title = p.name || p.title || p.type || p.layer || "DeepState feature";
-            const extra = p.status || p.control || p.zone || "";
-            layer.bindPopup(
-              "<b>" + String(title) + "</b><br>" +
-              "Kategória (heur): " + cat + "<br>" +
-              (extra ? ("Mezők: " + String(extra)) : "")
-            );
-          }
-        }).addTo(map);
+          style: () => ({
+            // kontúr
+            color: "#d00",
+            weight: 2.2,
+            opacity: 0.95,
+            // kitöltés
+            fillColor: "#6b0000",
+            fillOpacity: 0.28
+          })
+        });
+
+        deepStateLayer.addTo(map);
 
         const b = deepStateLayer.getBounds();
         if (b && b.isValid && b.isValid()) map.fitBounds(b.pad(0.12));
-        log("DeepState betöltve ✔");
+        log("DeepState réteg betöltve ✔");
       })
       .catch(err => log("HIBA: " + String(err && err.stack ? err.stack : err)));
   </script>
